# ruoyi-vue3-fastapi

./: README.md
ruoyi-fastapi-backend/: .dockerignore  .env.dev  .env.prod  Dockerfile  app.py  docker-compose.dev.yml  docker-compose.prod.yml  main.py  nginx.conf  pyproject.toml  server.py
ruoyi-fastapi-backend/config/: env.py
ruoyi-fastapi-frontend/: package.json
