[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
[project]
name = "ruoyi-fastapi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "apscheduler==3.11.0",
    "asyncmy>=0.2.10",
    "datetime==5.5",
    "fastapi[all]>=0.115.12",
    "loguru==0.7.3",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "passlib[bcrypt]==1.7.4",
    "pillow>=11.2.1",
    "psutil==7.0.0",
    "pydantic-validation-decorator>=0.1.4",
    "pyjwt[crypto]==2.10.1",
    "pymysql==1.1.1",
    "redis==5.2.1",
    "requests==2.32.3",
    "sqlalchemy[asyncio]==2.0.38",
    "sqlglot[rs]==26.6.0",
    "user-agents==2.2.0",
    "uvicorn>=0.34.2",
]
